Changed paths of resources

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 
-    <link href="/common/assets/css/main.css" rel="stylesheet">
-    <link href="/tm-planner/assets/css/tm-planner.css" rel="stylesheet">
+    <link href="common/assets/css/main.css" rel="stylesheet">
+    <link href="tm-planner/assets/css/tm-planner.css" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -25,15 +25,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <script src="/common/assets/js/main.js"></script>
-    <script src="/tm-planner/assets/js/tm-planner.js"></script>
+    <script src="common/assets/js/main.js"></script>
+    <script src="tm-planner/assets/js/tm-planner.js"></script>
 
-    <script src="/tm-planner/data/tm_boosters.js"></script>
-    <script src="/tm-planner/data/tm_boosters_jpn.js"></script>
-    <script src="/tm-planner/data/tm_opponents.js"></script>
-    <script src="/tm-planner/data/glb_no_lb.js"></script>
-    <script src="/vendor/optc-db/units.js"></script>
-    <script src="/vendor/optc-db/details.js"></script>
+    <script src="tm-planner/data/tm_boosters.js"></script>
+    <script src="tm-planner/data/tm_boosters_jpn.js"></script>
+    <script src="tm-planner/data/tm_opponents.js"></script>
+    <script src="tm-planner/data/glb_no_lb.js"></script>
+    <script src="vendor/optc-db/units.js"></script>
+    <script src="vendor/optc-db/details.js"></script>
 
     <!-- Google Analytics -->
     <script>
