--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>OPTC Treasure Map Planner | OPTC Voyage Log</title>
 
-    <link rel="icon" sizes="192x192" href="/pappagu.png">
+    <link rel="icon" sizes="192x192" href="pappagu.png">
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
