--- a/index.html
+++ b/index.html
@@ -452,6 +452,14 @@
                         </div>
                     </div>
                 </div>
+				
+				<div class="row">
+                    <div class="col col-md-4 col-6 div_x" id="div_1.1x">
+                        <h4>1.1x Booster(s)</h4>
+                        <div class="booster-info">Stats 1.2x, CD -3</div>
+                        <div class="booster-div" id="booster_1.1x"></div>
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="col col-md-4 col-6 div_x" id="div_1x">
