--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
         <div class="row">
             <div class="col offset-lg-4 col-lg-3 offset-md-3 col-md-5 offset-sm-2 col-sm-6 col-10">
                 <select class="form-control form-control-lg not-read-only" id="tm-select">
-                    <option value="2387_glb" class="tm-option glb-tm" id="newest-tm-glb">Kaido</option>
+				<option value="2362_glb" class="tm-option glb-tm" id="newest-tm-glb">Nami</option>
+                    <option value="2387_glb" class="tm-option glb-tm">Kaido</option>
                     <option value="2336_glb" class="tm-option glb-tm">Law</option>
                     <option value="2299_glb" class="tm-option glb-tm">Boa Hancock</option>
                     <option value="2261_glb" class="tm-option glb-tm">Shanks</option>
@@ -317,6 +318,11 @@
                         <h4>2.25x Booster(s)</h4>
                         <div class="booster-info">Stats 2.5x, CD -10</div>
                         <div class="booster-div" id="booster_2_25x"></div>
+                    </div>
+					<div class="col col-md-4 col-6 div_x" id="div_2_2x">
+                        <h4>2.2x Booster(s)</h4>
+                        <div class="booster-info">Stats 3x, CD -10</div>
+                        <div class="booster-div" id="booster_2_2x"></div>
                     </div>
                     <div class="col col-md-4 col-6 div_x" id="div_2x">
                         <h4>2x Booster(s)</h4>
@@ -454,10 +460,10 @@
                 </div>
 				
 				<div class="row">
-                    <div class="col col-md-4 col-6 div_x" id="div_1.1x">
+                    <div class="col col-md-4 col-6 div_x" id="div_1_1x">
                         <h4>1.1x Booster(s)</h4>
                         <div class="booster-info">Stats 1.2x, CD -3</div>
-                        <div class="booster-div" id="booster_1.1x"></div>
+                        <div class="booster-div" id="booster_1_1x"></div>
                     </div>
                 </div>
 
