Updated to latest changes

--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
         <div class="row">
             <div class="col offset-lg-4 col-lg-3 offset-md-3 col-md-5 offset-sm-2 col-sm-6 col-10">
                 <select class="form-control form-control-lg not-read-only" id="tm-select">
-				<option value="2362_glb" class="tm-option glb-tm" id="newest-tm-glb">Nami</option>
+                    <option value="2469_glb" class="tm-option glb-tm" id="newest-tm-glb">Smoothie & Oven (Preview)</option>
+                    <option value="2362_glb" class="tm-option glb-tm">Nami</option>
                     <option value="2387_glb" class="tm-option glb-tm">Kaido</option>
                     <option value="2336_glb" class="tm-option glb-tm">Law</option>
                     <option value="2299_glb" class="tm-option glb-tm">Boa Hancock</option>
@@ -220,7 +221,9 @@
                     <option value="1853_glb" class="tm-option glb-tm">Whitebeard</option>
                     <option value="1808_glb" class="tm-option glb-tm">Mihawk</option>
 
-                    <option value="2583_jpn" class="tm-option jpn-tm" id="newest-tm-jpn">Lucci</option>
+                    <option value="2659_jpn" class="tm-option jpn-tm" id="newest-tm-jpn">Smoker</option>
+                    <option value="2618_jpn" class="tm-option jpn-tm">Sakazuki & Issho</option>
+                    <option value="2583_jpn" class="tm-option jpn-tm">Lucci</option>
                     <option value="2557_jpn" class="tm-option jpn-tm">Shanks & Beckman</option>
                     <option value="2510_jpn" class="tm-option jpn-tm">Edward Weevil</option>
                     <option value="2469_jpn" class="tm-option jpn-tm">Smoothie & Oven</option>
@@ -319,7 +322,7 @@
                         <div class="booster-info">Stats 2.5x, CD -10</div>
                         <div class="booster-div" id="booster_2_25x"></div>
                     </div>
-					<div class="col col-md-4 col-6 div_x" id="div_2_2x">
+                    <div class="col col-md-4 col-6 div_x" id="div_2_2x">
                         <h4>2.2x Booster(s)</h4>
                         <div class="booster-info">Stats 3x, CD -10</div>
                         <div class="booster-div" id="booster_2_2x"></div>
@@ -414,12 +417,18 @@
                         <div class="booster-info">Stats 1.2x, CD -7</div>
                         <div class="booster-div" id="booster_1_25x_v3"></div>
                     </div>
+                    <div class="col col-md-4 col-6 div_x" id="div_1_25x_v4">
+                        <h4>1.25x Booster(s)</h4>
+                        <div class="booster-info">Stats 1.2x, CD -10</div>
+                        <div class="booster-div" id="booster_1_25x_v4"></div>
+                    </div>
                 </div>
 
                 <div class="row">
                     <div class="col col-12">
                         <h4>1.2x Booster(s)</h4>
-                        <div class="booster-info">Stats 1.2x, CD -3</div>
+                        <div class="booster-info" id="info_1_2x_main">Stats 1.2x, CD -3</div>
+                        <div class="booster-info" id="info_1_2x_alt">Stats 1.2x, CD -5</div>
                         <div id="booster_1_2x">
                             <div class="row">
                                 <div class="col col-md-4 col-6">
@@ -458,16 +467,13 @@
                         </div>
                     </div>
                 </div>
-				
-				<div class="row">
+
+                <div class="row">
                     <div class="col col-md-4 col-6 div_x" id="div_1_1x">
                         <h4>1.1x Booster(s)</h4>
                         <div class="booster-info">Stats 1.2x, CD -3</div>
                         <div class="booster-div" id="booster_1_1x"></div>
                     </div>
-                </div>
-
-                <div class="row">
                     <div class="col col-md-4 col-6 div_x" id="div_1x">
                         <h4>1x Booster(s)</h4>
                         <div class="booster-info">Stats 2.5x, CD -10</div>
