Night Mode Toggle

--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
                     <input type="radio" class="server-radio not-read-only" name="server" id="server-jpn" value="jpn" />
                     <label for="server-jpn">Japan</label>
                 </div>
+
+                <div class="server-radio-div">
+                    <input type="checkbox" class="not-read-only" name="night-mode" id="night-mode-check" value="night-mode">
+                    <label>Night Mode</label>
+                </div>
             </div>
         </div>
 
