Logical Or class filtering and Logical Or Type Filtering

--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
                         </label>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col offset-md-0 col-md-12 offset-6 col-6">
+                        <input type="checkbox" id="or-class-mode-checkbox" />
+                        <label for="or-class-mode-checkbox" id="or-class-mode-label">
+                            Logical Or Class Filtering
+                        </label>
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="col col-12">
