--- a/index.html
+++ b/index.html
@@ -507,7 +507,15 @@
 
         <div class="row">
             <div class="col offset-md-1 col-md-2 col-sm-4 col-6 team" id="first-team" data-team="0">
-                <h5>vs <span id="op-1"></span></h5>
+                <div class="tooltip">
+                    <span class="tooltiptext"><span class="tooltip-title">Preemptives:</span> Changes right column to Empty, Left column to Badly Matching, 2-Turn ATK Down (50%) <br/>
+                                              <span class="tooltip-title">Turn 3:</span> Resummons Fodder with 2-Turn 1-Great hit barriers <br/>
+                    </span>
+                    <h5>vs <span id="op-latest-1"></span></h5>
+                </div>
+                <div class="no-tooltip">
+                    <h5>vs <span id="op-1"></span></h5>
+                </div>
 
                 <div class="row">
                     <div class="col col-12">
@@ -543,7 +551,15 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="1">
-                <h5>vs <span id="op-2"></span></h5>
+                <div class="tooltip">
+                    <span class="tooltiptext"><span class="tooltip-title">Preemptives:</span>Rewind Top Row and Middle Left Specials By 2 Turns, 5 Turn Slot Bind for Top Row, Changes all orbs to [Block] <br/>
+                                              <span class="tooltip-title">On Death:</span> Deals 0.75x his ATK in damage <br/>
+                    </span>
+                    <h5>vs <span id="op-latest-2"></span></h5>
+                </div>
+                <div class="no-tooltip">
+                    <h5>vs <span id="op-2"></span></h5>
+                </div>
 
                 <div class="row">
                     <div class="col col-12">
@@ -579,7 +595,18 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="2">
-                <h5>vs <span id="op-3"></span></h5>
+                <div class="tooltip">
+                    <span class="tooltiptext"><span class="tooltip-title">Stage 6:</span> <br/> 
+                                                8 Turn Despair and 10 Turn Silence for both captains <br/>
+                                                <span class="tooltip-title">Preemptives:</span> All colour orbs badly matching for 2 turns <br/>
+                                                Crew Special Limit (2 for 9 Turns) <br/>
+                                                <span class="tooltip-title">HP < 50%:</span> 3 Turn Crew Paralysis <br/>
+                    </span>
+                    <h5>vs <span id="op-latest-3"></span></h5>
+                </div>
+                <div class="no-tooltip">
+                    <h5>vs <span id="op-3"></span></h5>
+                </div>
 
                 <div class="row">
                     <div class="col col-12">
@@ -615,7 +642,16 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="3">
-                <h5>vs <span id="op-4"></span></h5>
+                <div class="tooltip">
+                    <span class="tooltiptext"><span class="tooltip-title">Preemptives:</span> 9 Turn Immunity, 9 Turn 15-Hit Barrier, 99 Turn End of Turn Damage (0.25x ATK) <br/>
+                                                <span class="tooltip-title">HP < 50% (Once):</span> Binds 2 Crew Members for 8 Turns <br/>
+                                                <span class="tooltip-title">HP < 20% (Once):</span> 5 Turn Despair for both captains <br/>
+                    </span>
+                    <h5>vs <span id="op-latest-4"></span></h5>
+                </div>
+                <div class="no-tooltip">
+                    <h5>vs <span id="op-4"></span></h5>
+                </div>
 
                 <div class="row">
                     <div class="col col-12">
@@ -651,7 +687,24 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="4">
-                <h5>vs <span id="op-5"></span></h5>
+                <div class="tooltip">
+                    <span class="tooltiptext"><span class="tooltip-title">Stage 6:</span> <br/>
+                                              <span class="tooltip-title">Preemptive:</span> Change all orbs to [Block] <br/>
+                                              <span style="tooltip-title">HP < 50% (Once):</span> 4-Turn Chain Coefficient Reduction (x0.3) <br/>
+                                              <span class="tooltip-title">Stage 7:</span> <br/>
+                                              <span class="tooltip-title">Preemptives:</span> 98 Turn Delay, Poison, & Toxic Immunity <br/>
+                                              3 Turn Damage Reduction (70%) <br/>
+                                              6 Turn Bind Bottom Row <br/>
+                                              Shuffles all orbs to [Block] or [G] <br/>
+                                              <span class="tooltip-title">Katakuri Left Alive:</span> Revives to Full HP, boosts own attack by 1.5x for 99 turns, crew special limit (1 for 99 turns), 2 turn damage immunity <br/>
+                                              <span class="tooltip-title">Big Mom Left Alive </span> Revives to Full HP, clears buffs, attack interval to 1, blows away 2 random sailors for 3 turns <br/>
+                                              <span class="tooltip-title">Big Mom HP < 50% (Once): </span> 5 Turn Increased Damage Received (x1.5), 3 Turn Crew Paralysis
+                    </span>
+                    <h5>vs <span id="op-latest-5"></span></h5>
+                </div>
+                <div class="no-tooltip">
+                    <h5>vs <span id="op-5"></span></h5>
+                </div>
 
                 <div class="row">
                     <div class="col col-12">
@@ -687,7 +740,25 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" id="ambush-team" data-team="5">
-                <h5>vs <span id="op-6"></span></h5>
+                <div class="tooltip">
+                    <span class="tooltiptext"><span class="tooltip-title">Stage 2:</span> <br/>
+                                              <span style="color:lightgreen">Oven:</span> 98 Turns Defense Down Immunity, 4-Turn Defense Up <br/>
+                                              or <br/>
+                                              <span style="color:goldenrod">Smoothie:</span> 4-Turn ATK Up (1.5x), 4-Turn Threshold Damage Reduction (20k) <br/>
+                                              <span class="tooltip-title">Stage 3:</span> <br/>
+                                              <span class="tooltip-title">Preemptives:</span> 3-Turn Chain Lock (1.2x) <br/>
+                                              Shuffles orbs to [Empty] or [Bomb] <br/>
+                                              Silences crew for 2 Turns <br/>
+                                              <span class="tooltip-title">Interrupt (ATK Boost):</span> Clears Buffs, 99 Turn ATK Down (99%) <br/>
+                                              <span class="tooltip-title">HP < 50% (Once): </span> Right Row slot bind 4 turns and changes all orbs to [Block] <br/>
+                                              <span class="tooltip-title">HP < 20% (Once): </span> 70% HP Cut, 9 Turn Burn (3k/Perfect), 4 Turn Damage Threshold (99%)
+                    </span>
+                    <h5>vs <span id="op-latest-6"></span></h5>
+                </div>
+                <div class="no-tooltip">
+                    <h5>vs <span id="op-6"></span></h5>
+                </div>
+                
 
                 <div class="row">
                     <div class="col col-12">
