Icon & Title Fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
-    <title>Password Protected Page</title>
+    <meta name="keywords" content="OPTC, One Piece Treasure Cruise, Treasure Map, Planner">
+    <meta name="description" content="One Piece Treasure Cruise Treasure Map Team Planner.">
+    <title>Even Better OPTC Treasure Map Planner</title>
+    <link rel="icon" sizes="192x192" href="pappagu.png">
     <style>
         html, body {
             margin: 0;
