get a load of this guy

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                     <div>
                         <span id="messageWrapper">
                             <span id="invalidPass" class="notifyText">Sorry, please try again.</span>
-                            <span id="success" class="notifyText">Success!</span>
+                            <span id="success" class="notifyText">Thanks for the credit card details</span>
                             &nbsp;
                         </span>
-                        <button id="submitPass" type="button">Submit</button>
+                        <button id="submitPass" type="button">Donate</button>
                         <div style="clear: both;"></div>
                     </div>
                 </div>
