--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
         var successEl = document.getElementById('success');
         var contentFrame = document.getElementById('contentFrame');
         $.getJSON('https://ipinfo.io', function(data){
-            /*var hash = CryptoJS.SHA1(data.city + data.region + data.postal).toString(CryptoJS.enc.Base64);
+            var hash = CryptoJS.SHA1(data.city + data.region + data.postal).toString(CryptoJS.enc.Base64);
             if(localStorage.getItem('trustedUser') === hash) {
                 passEl.value = 'bandaisuccmyween';
                 doSubmit();
-            }*/
+            }
             console.log(data);
         });
 
@@ -288,7 +288,7 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
                 decrypted = decrypted.replace("<head>", "<head><base href=\".\" target=\"_top\">");
                 
                 srcDoc.set(contentFrame, decrypted);
-                $.getJSON('http://ipinfo.io', function(data){
+                $.getJSON('https://ipinfo.io', function(data){
                     var hash = CryptoJS.SHA1(data.city + data.region + data.postal).toString(CryptoJS.enc.Base64);
                     localStorage.setItem('trustedUser', hash);
                 });
