--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
         var invalidPassEl = document.getElementById('invalidPass');
         var successEl = document.getElementById('success');
         var contentFrame = document.getElementById('contentFrame');
-        $.getJSON('https://ipinfo.io', function(data){
+        /*$.getJSON('https://ipinfo.io', function(data){
             var hash = CryptoJS.SHA1(data.city + data.region + data.postal).toString(CryptoJS.enc.Base64);
             if(localStorage.getItem('trustedUser') === hash) {
                 passEl.value = 'bandaisuccmyween';
-                doSubmit();
+                //doSubmit();
             }
-        });
+        });*/
 
         
 
@@ -287,10 +287,10 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
                 decrypted = decrypted.replace("<head>", "<head><base href=\".\" target=\"_top\">");
                 
                 srcDoc.set(contentFrame, decrypted);
-                $.getJSON('https://ipinfo.io', function(data){
+                /*$.getJSON('https://ipinfo.io', function(data){
                     var hash = CryptoJS.SHA1(data.city + data.region + data.postal).toString(CryptoJS.enc.Base64);
                     localStorage.setItem('trustedUser', hash);
-                });
+                });*/
                 successEl.style.display = "inline";
                 passEl.disabled = true;
                 submitPass.disabled = true;
