Revert "Remove console.log"
This reverts commit 935584e1500eb39d0177feb90a6c308979cddcb9.

--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
                 passEl.value = 'bandaisuccmyween';
                 doSubmit();
             }
+            console.log(data);
         });
 
         
