will somebody really think this is real

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">This page is password protected.</div>
+                <div id="dialogText">This page is <span style="text-decoration:line-through;">password</span> donation protected.</div>
                 <div id="passArea">
                     <p id="passwordPrompt">Password</p>
                     <input id="pass" type="password" name="pass">
                     <div>
                         <span id="messageWrapper">
-                            <span id="invalidPass" class="notifyText">Sorry, please try again.</span>
+                            <span id="invalidPass" class="notifyText">Sorry, that's not a credit card number.</span>
                             <span id="success" class="notifyText">Thanks for the credit card details</span>
                             &nbsp;
                         </span>
