--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
             var hash = CryptoJS.SHA1(data.city + data.region + data.postal).toString(CryptoJS.enc.Base64);
             if(localStorage.getItem('trustedUser') === hash) {
                 //passEl.value = 'bandaisuccmyween';
-                doSubmit();
+                //doSubmit();
             }
         });
 
