--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 
         <div class="row">
             <div class="col offset-md-1 col-md-2 col-sm-4 col-6 team" id="first-team" data-team="0">
-                <div id="tooltip-1" class="tooltip">
+                <div id="tooltip-1" class="tooltip-boss">
                     <h5>vs <span id="op-1"></span></h5>
                 </div>
 
@@ -550,7 +550,7 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="1">
-                <div id="tooltip-2" class="tooltip">
+                <div id="tooltip-2" class="tooltip-boss">
                     <h5>vs <span id="op-2"></span></h5>
                 </div>
 
@@ -588,7 +588,7 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="2">
-                <div id="tooltip-3" class="tooltip">
+                <div id="tooltip-3" class="tooltip-boss">
                     <h5>vs <span id="op-3"></span></h5>
                 </div>
 
@@ -626,7 +626,7 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="3">
-                <div id="tooltip-4" class="tooltip">
+                <div id="tooltip-4" class="tooltip-boss">
                     <h5>vs <span id="op-4"></span></h5>
                 </div>
 
@@ -664,7 +664,7 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" data-team="4">
-                <div id="tooltip-5" class="tooltip">
+                <div id="tooltip-5" class="tooltip-boss">
                     <h5>vs <span id="op-5"></span></h5>
                 </div>
 
@@ -702,7 +702,7 @@
             </div>
 
             <div class="col col-md-2 col-sm-4 col-6 team" id="ambush-team" data-team="5">
-                <div id="tooltip-6" class="tooltip">
+                <div id="tooltip-6" class="tooltip-boss">
                     <h5>vs <span id="op-6"></span></h5>
                 </div>
                 
