--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="OPTC, One Piece Treasure Cruise, Treasure Map, Planner">
     <meta name="description" content="One Piece Treasure Cruise Treasure Map Team Planner.">
 
-    <title>"Better" OPTC Treasure Map Planner</title>
+    <title>"200% Costs Money To Use" OPTC Treasure Map Planner</title>
 
     <link rel="icon" sizes="192x192" href="pappagu.png">
 
