Added basic special filter

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="vendor/optc-db/units.js"></script>
     <script src="vendor/optc-db/details.js"></script>
     <script src="vendor/optc-db/cooldowns.js"></script>
+    <script src="vendor/optc-db/matchers.js"></script>
 
     <!-- Google Analytics -->
     <script>
@@ -304,6 +305,18 @@
                         <div class="filter class-filter cerebral-div" data-filter="Cerebral"></div>
                         <div class="filter class-filter powerhouse-div" data-filter="Powerhouse"></div>
                         <div class="filter class-filter driven-div" data-filter="Driven"></div>
+                    </div>
+
+                    <div class="col col-md-12 col-6">
+                        <div class="filter spec-filter def-down-div" data-filter="Defense reducers"></div>
+                        <div class="filter spec-filter def-up-rm-div" data-filter="Enemy Increased Defense reducer"></div>
+                        <div class="filter spec-filter dmg-red-rm-div" data-filter="Enemy Percent Damage Reduction reducer"></div>
+                        <div class="filter spec-filter despair-rm-div" data-filter="Despair reducers"></div>
+                        <div class="filter spec-filter atk-down-rm-div" data-filter="Crew ATK DOWN reducer"></div>
+                        <div class="filter spec-filter cdr-div" data-filter="Special cooldown reducers"></div>
+                        <div class="filter spec-filter chain-lock-rm-div" data-filter="Chain Multiplier Limit and Chain Lock reducer"></div>
+                        <div class="filter spec-filter threshold-rm-div" data-filter="Enemy Threshold Damage Reduction reducer"></div>
+                        <div class="filter spec-filter cd-silence-rm-div" data-filter="Silence reducers"></div>
                     </div>
                 </div>
 
