Export URL for original planner

--- a/index.html
+++ b/index.html
@@ -780,6 +780,7 @@
             <div class="col offset-md-2 col-md-4 col-12">
                 <button type="button" class="btn btn-sm btn-secondary" id="pts-all-button">Update All Pts</button>
                 <button type="button" class="btn btn-sm btn-dark sl-btn" id="export-url-button">Export URL</button>
+                <button type="button" class="btn btn-sm btn-dark sl-btn" id="export-url-orig-button">Export URL (Original Planner)</button>
                 <button type="button" class="btn btn-sm btn-danger not-read-only" id="reset-button">Reset</button>
             </div>
 
