Added text box as alternative to entering tm level

--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
                 <label class="confirm-save" for="confirm-save">Confirm before Saving</label>
             </div>
             <div class="col col-md-3 col-12">
-                <label id="tm-level-label" class="confirm-save"></label>
+                Current TM Level: <input id="tm-level-label" class="confirm-save"></label>
             </div>
         </div>
 
