--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="zl1814">
     <meta name="keywords" content="OPTC, One Piece Treasure Cruise, Treasure Map, Planner">
-    <meta name="description" content="This is 201% the last sugo you're pulling on, right?  F2P now?">
+    <meta name="description" content="This is absolutely the last sugo you're pulling on, right?  F2P now?">
 
     <title>"200% Costs Money To Use" OPTC Treasure Map Planner</title>
 
