Preview for TM Blackbeard

--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                     <option value="1853_glb" class="tm-option glb-tm">Whitebeard</option>
                     <option value="1808_glb" class="tm-option glb-tm">Mihawk</option>
 
-                    <option value="2659_jpn" class="tm-option jpn-tm" id="newest-tm-jpn">Smoker</option>
+                    <option value="2197_jpn" class="tm-option jpn-tm" id="newest-tm-jpn">Blackbeard (Preview)</option>
+                    <option value="2659_jpn" class="tm-option jpn-tm">Smoker</option>
                     <option value="2618_jpn" class="tm-option jpn-tm">Sakazuki & Issho</option>
                     <option value="2583_jpn" class="tm-option jpn-tm">Lucci</option>
                     <option value="2557_jpn" class="tm-option jpn-tm">Shanks & Beckman</option>
