Beta version of Drag & Drop for Ambush Boss

--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
 
                 <div class="row">
                     <div class="col col-12">
-                        <div class="ambush-team-slot" id="team-slot-50" data-slot="0"></div>
+                        <div class="ambush-team-slot friend-cap" id="team-slot-50" data-slot="0"></div>
                         <div class="ambush-team-slot" id="team-slot-51" data-slot="1"></div>
                     </div>
                 </div>
@@ -850,12 +850,6 @@
                 <div class="row">
                     <div class="col col-12">
                         <button type="button" class="btn btn-dark btn-sm cal-button">Export to Calculator</button>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col col-12 team-6-info">
-                        (Click to add only)
                     </div>
                 </div>
 
