TM Boosters for Doflamingo + Points per boss feature

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
         <div class="row">
             <div class="col offset-lg-4 col-lg-3 offset-md-3 col-md-5 offset-sm-2 col-sm-6 col-10">
                 <select class="form-control form-control-lg not-read-only" id="tm-select">
-                    <option value="2469_glb" class="tm-option glb-tm" id="newest-tm-glb">Smoothie & Oven</option>
+                    <option value="2443_glb" class="tm-option glb-tm" id="newest-tm-glb">Doflamingo</option>
+                    <option value="2469_glb" class="tm-option glb-tm">Smoothie & Oven</option>
                     <option value="2362_glb" class="tm-option glb-tm">Nami</option>
                     <option value="2387_glb" class="tm-option glb-tm">Kaido</option>
                     <option value="2336_glb" class="tm-option glb-tm">Law</option>
@@ -578,6 +579,12 @@
 
                 <div class="row">
                     <div class="col col-12">
+                        Points: <span class="pts" id="boss-pts-1"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
                         CD: <span id="boss-cd-1"></span>
                     </div>
                 </div>
@@ -631,6 +638,12 @@
                 <div class="row">
                     <div class="col col-12">
                         ATK: <span id="boss-atk-2"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
+                        Points: <span class="pts" id="boss-pts-2"></span>
                     </div>
                 </div>
 
@@ -694,6 +707,12 @@
 
                 <div class="row">
                     <div class="col col-12">
+                        Points: <span class="pts" id="boss-pts-3"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
                         CD: <span id="boss-cd-3"></span>
                     </div>
                 </div>
@@ -747,6 +766,12 @@
                 <div class="row">
                     <div class="col col-12">
                         ATK: <span id="boss-atk-4"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
+                        Points: <span class="pts" id="boss-pts-4"></span>
                     </div>
                 </div>
 
@@ -810,6 +835,12 @@
 
                 <div class="row">
                     <div class="col col-12">
+                        Points: <span class="pts" id="boss-pts-5"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
                         CD: <span id="boss-cd-5"></span>
                     </div>
                 </div>
@@ -862,6 +893,12 @@
                 <div class="row">
                     <div class="col col-12">
                         ATK: <span id="boss-atk-6"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
+                        Points: <span class="pts" id="boss-pts-6"></span>
                     </div>
                 </div>
 
