TM Point Totaller

--- a/index.html
+++ b/index.html
@@ -956,6 +956,12 @@
         </div>
 
         <div class="row">
+            <div class="col offset-md-9 col-md-3 col-12">
+                Your Total TM Points: <label class="confirm-save" id="tm-point-total-label"></label>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col offset-md-4 col-md-4 offset-1 col-11" id="nakama-info">
                 <i class="fas fa-info-circle"></i>&nbsp;
                 Upload your teams to <a href="https://www.nakama.network/" target="_blank">Nakama Network</a> to share with others!
